Fix news' bugs, add comments wrap

--- a/news/css/news-piece.less
+++ b/news/css/news-piece.less
@@ -506,7 +506,6 @@
 
   width: 18%;
   // min-width: 170px;
-  padding-bottom: 600px;
 }
 
 .news-piece-layout__dummy {
@@ -683,14 +682,18 @@
 
 
 .comms {
-  height: 300px;
-
-  background: #fee;
+  margin-bottom: 40px;
 }
 
 .comms__comments {
-  width: 50%;
-  height: 100%;
+  float: left;
 
-  background-color: #eff;
+  width: 52%;
+}
+
+.comms__ad {
+  float: left;
+
+  width: 46%;
+  margin-left: 2%;
 }
